--- a/ejprd-metadata-model/pom.xml
+++ b/ejprd-metadata-model/pom.xml
@@ -13,6 +13,9 @@
         <module>metadata-validator</module>
         <module>metadata-model-visualizer</module>
     </modules>
-
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 </project>
