--- a/ejprd-metadata-model/metadata-model-services/pom.xml
+++ b/ejprd-metadata-model/metadata-model-services/pom.xml
@@ -77,6 +77,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-core -->
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-core</artifactId>
+            <version>3.13.1</version>
+        </dependency>
+
+
         <!-- ShEx validator -->
         <dependency>
             <groupId>fr.inria.lille.shexjava</groupId>
