--- a/ejprd-metadata-model/metadata-model-services/pom.xml
+++ b/ejprd-metadata-model/metadata-model-services/pom.xml
@@ -191,12 +191,11 @@
             <artifactId>jena-commonsrdf</artifactId>
             <version>3.15.0</version>
             <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.8.10</version>
-            <scope>compile</scope>
+       </dependency>
+       <dependency>
+           <groupId>com.fasterxml.jackson.core</groupId>
+           <artifactId>jackson-databind</artifactId>
+           <version>[2.9.10.4,)</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
