--- a/metadata-publisher2/pom.xml
+++ b/metadata-publisher2/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>jsonld-java</artifactId>
             <version>0.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
